Bug 478091 - Does not remove previous KCM header when switching to certain QtWidgets KCMs (KDE Connect KCM, Digital Camera)
Summary: Does not remove previous KCM header when switching to certain QtWidgets KCMs ...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.90.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 477244 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-12-05 05:20 UTC by Jakob Petsovits
Modified: 2024-03-07 18:48 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jakob Petsovits 2023-12-05 05:20:36 UTC
SUMMARY

Weird visual bug that ends up in two KCM headers showing at the same time. The KDE Connect KCM already has a non-standard header bar, with header title misaligned and no separator below it. I was tempted to report it in that component. However, removing the previous header bar when switching to a different (however non-standard) KCM is the job of the System Settings app. So here goes.


STEPS TO REPRODUCE
1. Open the "Device Actions" KCM in System Settings. It doesn't matter if you navigate there via "Disks & Cameras" or open it directly via KRunner.
2. Press back in the sidebar and click on "KDE Connect" to navigate there.

OBSERVED RESULT
The header bar from "Device Actions" is still present. Below it you can find the entirety of the "KDE Connect" KCM, including its own "KDE Connect" header.

EXPECTED RESULT
The "Device Actions" header disappears and the main view only shows the "KDE Connect" KCM by itself.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.90.0
KDE Frameworks Version: 5.246.0
Qt Version: 6.6.1
Kernel Version: 6.6.3-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 8 × Intel® Core™ i7-8565U CPU @ 1.80GHz
Memory: 15.3 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 620

ADDITIONAL INFORMATION
This can also be reproduced with "Keyboard" or "Wi-Fi & Networking" instead of "Device Actions". Which strongly suggests that this is an interaction between 1. QtWidget KCM as the origin to navigate away from, 2. whatever weird stuff the (presumably also QtWidget-based) KDE Connect KCM is doing to avoid using the native System Settings header.

No screenshot because I still haven't figured out how to make privileged D-Bus services work in my Plasma 6 dev environment.
Comment 1 Paolo Zamponi 2023-12-05 08:12:01 UTC
It seems related to https://bugs.kde.org/show_bug.cgi?id=477244
Comment 2 Nate Graham 2023-12-05 17:13:24 UTC
*** Bug 477244 has been marked as a duplicate of this bug. ***
Comment 3 Jakob Petsovits 2023-12-18 21:47:12 UTC
Immediate cause: ModuleView::updatePageIconHeader() in systemsettings/core/ModuleView.cpp is making an early return via this condition:

    KCModule *kcm = d->mPages.value(page);
    if (!kcm || !kcm->metaData().isValid()) {
        // Seems like we have some form of a race condition going on here...
        return;
    }

This prevents the header-updating code further down in the same function to execute.

Root cause: will need some more analysis, I figure.
Comment 4 Jakob Petsovits 2023-12-18 23:01:14 UTC
KCModuleLoader::loadModule() has the correct metadata available when it returns it to System Settings' ModuleView, but the instantiated KCModule object does not carry that same metadata.

KdeConnectKcm (which powers kcm_kdeconnect.so) is using the older constructor signature (QObject *parent, const QVariantList &args) and from what I can tell, KPluginFactory is forgiving enough to call that instead of requiring the plugin to support the newer version that also contains the metadata.

The KdeConnectKcm constructor then initializes its parent as simply KCModule(qobject_cast<QWidget *>(parent)). As a subclass of KCModule, it's allowed to do this, however KCModule also warns:

    /**
     * Utility constructor for creating a KCModule that is embedded, for example in a KPluginWidget
     * This constructor should not be used for KCMs that are part launched in systemsettings!
     * (...)
     */
    explicit KCModule(QObject *parent)
        : KCModule(qobject_cast<QWidget *>(parent), KPluginMetaData{})
    {
    }

So it seems the solution is for KdeConnectKcm to use the more modern constructor signature and hand down the KPluginMetaData object to KCModule, as it's supposed to do. I'm sure it's the same issue with the Digital Camera KCM.

I don't quite understand the KPluginWidget use case that apparently allows plugins to use the wrong constructor, but presumably it's required for something. It would have been nice if the KCM developers had been loudly warned about using the wrong constructor.
Comment 5 Bug Janitor Service 2023-12-19 01:08:09 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/278
Comment 6 Jakob Petsovits 2023-12-20 00:11:16 UTC
Git commit b6354ba698dc237a0814bc57f2bf286552a23b79 by Jakob Petsovits.
Committed on 20/12/2023 at 01:07.
Pushed by jpetso into branch 'master'.

Hide the custom page header for KCM plugins without metadata

If we have to return early, we shouldn't just leave whatever was
shown or hidden for the last KCM page.

M  +15   -5    core/ModuleView.cpp

https://invent.kde.org/plasma/systemsettings/-/commit/b6354ba698dc237a0814bc57f2bf286552a23b79
Comment 7 Bug Janitor Service 2024-03-05 19:55:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/kamera/-/merge_requests/16
Comment 8 Albert Vaca Cintora 2024-03-06 22:04:11 UTC
Git commit 1785160049b29f3be6c729e344774afab2f26928 by Albert Vaca Cintora, on behalf of Nicolas Fella.
Committed on 06/03/2024 at 22:03.
Pushed by albertvaka into branch 'master'.

[kcm] Use correct KCModule constructor
Related: bug 482199

M  +2    -2    kcm/kcm.cpp
M  +1    -1    kcm/kcm.h

https://invent.kde.org/network/kdeconnect-kde/-/commit/1785160049b29f3be6c729e344774afab2f26928
Comment 9 Nicolas Fella 2024-03-07 14:38:02 UTC
Git commit c5934e3d9b0b7c5b56eb69b28c2ba9e5d0c35c52 by Nicolas Fella.
Committed on 07/03/2024 at 14:37.
Pushed by nicolasfella into branch 'release/24.02'.

[kcm] Use correct KCModule constructor
Related: bug 482199
(cherry picked from commit 1785160049b29f3be6c729e344774afab2f26928)

M  +2    -2    kcm/kcm.cpp
M  +1    -1    kcm/kcm.h

https://invent.kde.org/network/kdeconnect-kde/-/commit/c5934e3d9b0b7c5b56eb69b28c2ba9e5d0c35c52
Comment 10 Nicolas Fella 2024-03-07 18:48:27 UTC
Git commit 33e37cf929223c328b3dbaa6bbba7a05db3612cc by Nicolas Fella.
Committed on 05/03/2024 at 19:54.
Pushed by nicolasfella into branch 'master'.

[kcm] Pass metadata to KCModule constructor

M  +1    -1    kcontrol/kamera.cpp

https://invent.kde.org/graphics/kamera/-/commit/33e37cf929223c328b3dbaa6bbba7a05db3612cc
Comment 11 Nicolas Fella 2024-03-07 18:48:46 UTC
Git commit c61c6fda7748681068e8f47e1caaedbb73794b1d by Nicolas Fella.
Committed on 07/03/2024 at 18:48.
Pushed by nicolasfella into branch 'release/24.02'.

[kcm] Pass metadata to KCModule constructor
(cherry picked from commit 33e37cf929223c328b3dbaa6bbba7a05db3612cc)

M  +1    -1    kcontrol/kamera.cpp

https://invent.kde.org/graphics/kamera/-/commit/c61c6fda7748681068e8f47e1caaedbb73794b1d