Hide the custom page header for KCM plugins without metadata

If we have to return early, we shouldn't just leave whatever was
shown or hidden for the last KCM page.

BUG: 478091